Adding Resolution Blog

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<nav>
 		<ul>
 			<li><a href="theBeatlesBriefHistory.html">The Bealtes: A Brief History</a></li>
-			<li>One Month Resolutions Blog</li>
+			<li><a href="MonthlyResolutions.html">One Month Resolutions Blog</a></li>
 		</ul>
 		</nav>
 	</main>
