--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<ul>
 			<li><a href="theBeatlesBriefHistory.html">The Bealtes: A Brief History</a></li>
 			<li><a href="MonthlyResolutions.html">One Month Resolutions Blog</a></li>
+			<li><a href="choco's_tacos.html">Choco's Tacos (Taco Restaurant Mockup)</a></li>
 		</ul>
 		</nav>
 	</main>
