Added AirCnC website

--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
 		<h3>Select from Below:</h3>
 		<nav>
 		<ul>
-			<li><a href="theBeatlesBriefHistory.html">The Bealtes: A Brief History</a></li>
-			<li><a href="MonthlyResolutions.html">One Month Resolutions Blog</a></li>
-			<li><a href="choco's_tacos.html">Choco's Tacos (Taco Restaurant Mockup)</a></li>
+			<h3>Not yet mobile ready:</h3>
+			<ul class="not_mobile_ready">
+				<li><a href="theBeatlesBriefHistory.html">The Bealtes: A Brief History</a></li>
+				<li><a href="MonthlyResolutions.html">One Month Resolutions Blog</a></li>
+				<li><a href="choco's_tacos.html">Choco's Tacos (Taco Restaurant Mockup)</a></li>
+			</ul>
+			<h3>Mobile Friendly:</h3>
+			<ul class="mobile_ready">
+				<li><a href="aircnc.html">aircnc (Social Site for Our Dog, Doug!)</a></li>
+			</ul>
 		</ul>
 		</nav>
 	</main>
