updated two sites to be mobile friendly

--- a/aircnc.html
+++ b/aircnc.html
@@ -26,7 +26,7 @@
             </div>
             <div class="clearfix pet-details col">
               <div class="pet-details-text">
-                <h1>Doug The Pug, Pug</h1>
+                <h1>Dug The Pug, Pug</h1>
                 <h3>Los Angeles, CA, United States</h3>
               </div>
               <div class="icons adjust col">
@@ -70,7 +70,7 @@
             difficult to housebreak. Now, Dug is an obedient pug with an affectionate 
             and charming personality.
           </p>
-          <p id="contact"><a href="mailto:paolamaravilla17@gmail.com?subject=aircnc%20Doug%20The%20Pug">Contact Owner</a></p>
+          <p id="contact"><a href="mailto:paolamaravilla17@gmail.com?subject=aircnc%20Dug%20The%20Pug">Contact Owner</a></p>
         </aside>
         <aside class="care clearfix">
           <h4 class="col">Care</h4>
