--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 		<ul>
 			<h3>Not yet mobile ready:</h3>
 			<ul class="not_mobile_ready">
-				<li><a href="theBeatlesBriefHistory.html">The Bealtes: A Brief History</a></li>
-				<li><a href="MonthlyResolutions.html">One Month Resolutions Blog</a></li>
 				<li><a href="choco's_tacos.html">Choco's Tacos (Taco Restaurant Mockup)</a></li>
 			</ul>
 			<h3>Mobile Friendly:</h3>
 			<ul class="mobile_ready">
+				<li><a href="theBeatlesBriefHistory.html">The Bealtes: A Brief History(Very First Website)</a></li>
+				<li><a href="MonthlyResolutions.html">One Month Resolutions Blog</a></li>
 				<li><a href="aircnc.html">aircnc (Social Site for Our Dog, Doug!)</a></li>
 			</ul>
 		</ul>
