--- a/aircnc.html
+++ b/aircnc.html
@@ -14,7 +14,7 @@
       <img src="images/logo.png" alt="AirCnC-Logo">
     </header><!--End of logo-->
     <div class="dog-hero">
-      <img src="images/dog-hero-image.png" alt="Dog-Hero">
+      <img src="images/Slinky_Main.jpg" alt="Dog-Hero">
     </div><!--end of dog-hero-->
       <section class="brief clearfix">
       <div class="container">
@@ -26,7 +26,7 @@
             </div>
             <div class="clearfix pet-details col">
               <div class="pet-details-text">
-                <h1>Dug The Pug, Pug</h1>
+                <h1>Slinky, Dachshund</h1>
                 <h3>Los Angeles, CA, United States</h3>
               </div>
               <div class="icons adjust col">
@@ -44,7 +44,7 @@
             </div><!--end of pet details-->
         </aside><!--end of profile-->
         <aside class="booking col">
-          <h2 class="price">$100 <span class="time">Per Day</span></h2>
+          <h2 class="price">$1000 <span class="time">Per Day</span></h2>
           <div class="button">
             <span>Request to Book</span>
           </div>
@@ -56,19 +56,14 @@
         <aside class="about">
           <h3>About this Dog</h3>
           <p>
-            "Hi, there! My name is Dug. I have just met you, and I love you!"
+            "Hi, there! My name is Slinky. I have just met you, and I love you!"
           </p><br>
           <p>
-            Originating in China, pugs were prized by the Emperors of China 
-            and lived in luxurious accommodations, sometimes even being guarded 
-            by soldiers. Pugs were bred to be companions, and that's exactly what 
-            they do best. They crave attention and are very lovable. Pugs are playful 
-            dogs, which is why Dug's favorite activity is going to the dog park. Pugs 
-            have a life span of 12 to 15 years. On average, pugs weigh 14 to 18 pounds 
-            and grow up to 14 inches tall. We adopted Dug from an animal shelter. 
-            The training was a little challenging because pugs tend to be stubborn and 
-            difficult to housebreak. Now, Dug is an obedient pug with an affectionate 
-            and charming personality.
+            Originating in Germany, dachshunds were bred to pursue badgers into their burrows. 
+            These little dogs have a distinct apperance characterized by their long bodies, long ears, and short legs.
+            Slinky loves to go on walks and he is a very social dog, so do not be suprised if he wants to make lots and
+            lots of friends! He's also not a very picky eater and will eat almost anything (for better or worse). Please
+            give him some peanutbutter now and then!
           </p>
           <p id="contact"><a href="mailto:paolamaravilla17@gmail.com?subject=aircnc%20Dug%20The%20Pug">Contact Owner</a></p>
         </aside>
@@ -94,9 +89,9 @@
           </ul>
         </aside>
         <aside class="photos">
-          <img src="images/Pug_Image_1.png">
-          <img class="middle-img" src="images/Pug_Image_2.png">
-          <img src="images/Pug_Image_3.png">
+          <img src="images/Slinky1.jpg">
+          <img class="middle-img" src="images/Slinky2.jpg">
+          <img src="images/Slinky3.jpg">
         </aside>
       </div>
       </section><!--end of details-->
