--- a/aircnc.html
+++ b/aircnc.html
@@ -14,7 +14,7 @@
       <img src="images/logo.png" alt="AirCnC-Logo">
     </header><!--End of logo-->
     <div class="dog-hero">
-      <img src="images/Slinky_Main.jpg" alt="Dog-Hero">
+      <img src="images/Slinky_Main.JPG" alt="Dog-Hero">
     </div><!--end of dog-hero-->
       <section class="brief clearfix">
       <div class="container">
