--- a/aircnc.html
+++ b/aircnc.html
@@ -89,9 +89,9 @@
           </ul>
         </aside>
         <aside class="photos">
-          <img src="images/Slinky1.jpg">
-          <img class="middle-img" src="images/Slinky2.jpg">
-          <img src="images/Slinky3.jpg">
+          <img src="images/Slinky1.JPG">
+          <img class="middle-img" src="images/Slinky2.JPG">
+          <img src="images/Slinky3.JPG">
         </aside>
       </div>
       </section><!--end of details-->
